test/parse/module/bad-memory-init-size-negative.txt
;;; ERROR: 1
(module (memory -100))
(;; STDERR ;;;
out/test/parse/module/bad-memory-init-size-negative.txt:2:17: error: unexpected token "-100", expected a natural number (e.g. 123).
(module (memory -100))
                ^^^^
;;; STDERR ;;)
